fix overflow check menu animation

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,37 +78,6 @@ body {
 .menu__price {
   display: flex;
   align-items: flex-end;
-  transition: transform 0.5s ease-in-out;
-}
-
-.menu__check {
-  width: 59px;
-  height: 100%;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background-color: #99E2D0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  margin-right: -59px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: margin-right 0.5s ease-in-out;
-}
-.menu__check i {
-  background-color: #fff;
-  padding: 2px 3px;
-  border-radius: 50%;
-  color: #99E2D0;
-}
-
-.menu__card:hover .menu__check {
-  margin: 0;
-}
-
-.menu__card:hover .menu__price {
-  transform: translateX(-59px);
 }
 
 .menu__card:nth-child(2) {
@@ -161,6 +130,70 @@ body {
   -webkit-background-clip: text;
   background-image: linear-gradient(#9356DC, #FF79DA);
   -webkit-text-fill-color: transparent;
+}
+
+.menu__card {
+  position: relative;
+  overflow: hidden;
+  opacity: 0;
+  transform: translateX(-50px);
+  animation-name: fade-in;
+  animation-duration: 1.5s;
+  animation-delay: 0s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
+}
+
+.menu__check {
+  width: 59px;
+  height: 100%;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: #99E2D0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin-right: -59px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: margin-right 0.5s ease-in-out;
+}
+.menu__check i {
+  background-color: #fff;
+  padding: 2px 3px;
+  border-radius: 50%;
+  color: #99E2D0;
+}
+
+.menu__price {
+  transition: transform 0.5s ease-in-out;
+}
+
+.menu__txt p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.menu__txt .menu__title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.menu__card:hover .menu__check {
+  margin: 0;
+}
+
+.menu__card:hover .menu__price {
+  transform: translateX(-59px);
+}
+
+.menu__card:hover .menu__txt {
+  width: calc(100% - 100px);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .form {
