--- a/sass/components/_menu-card.scss
+++ b/sass/components/_menu-card.scss
@@ -8,6 +8,7 @@
     padding: 12px 15px;
     position: relative;
     overflow: hidden;
+    
     // setting for animation when page laod
     opacity: 0;
     transform: translateX(-50px);
@@ -33,41 +34,8 @@
 .menu__price {
     display: flex;
     align-items: flex-end;
-    transition: transform 0.5s ease-in-out;
 }
 
-
-.menu__check {
-    width: 59px;
-    height: 100%;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    background-color: $tertiary-color;
-    position: absolute;
-    right: 0;
-    top: 0;
-    margin-right: -59px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: margin-right 0.5s ease-in-out; 
-
-    i {
-        background-color: #fff;
-        padding: 2px 3px;
-        border-radius: 50%;
-        color: $tertiary-color; 
-    }
-}
-
-// animation checkmark menu
-.menu__card:hover .menu__check {
-    margin: 0;
-}
-
-.menu__card:hover .menu__price {
-    transform: translateX(-59px);
-}
 
 // animation  apparition menu
 .menu__card:nth-child(2) {
